src/App.css
.App {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--Very-Light-Gray);
}

.container {
    width: 100%;
    max-width: 1440px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.app__title {
    font-weight: 200;
    color: var(--Very-Dark-Blue);
    font-size: 2.4em;
    text-align: center;
    margin-bottom: 20px;
}

.app__title > span {
    font-weight: 600;
}

.app__description {
    text-align: center;
    font-weight: 400;
    width: 500px;
    margin-bottom: 60px;
}

.app__content {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    gap: 27px 27px;
    grid-template-areas: "app__content__column_1 app__content__column_2 app__content__column_3";
    /* align-items: center; */
}


.app__content__column_1 {
    grid-area: app__content__column_1;
}

.app__content__column_2 {
    grid-area: app__content__column_2;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 27px;

}

.app__content__column_3 {
    grid-area: app__content__column_3;

}

@media (max-width: 1024px) {
    .App {
        height: auto;
        padding-top: 60px;
        padding-bottom: 60px;

    }

    .app__content {
    display: flex;
    flex-direction: column;
    gap: 27px;
}
}

@media (max-width:460px) {
    .app__title {
    font-size: 1.6em;
}


.app__description {
    text-align: center;
    font-weight: 400;
    width: 300px;
    margin-bottom: 60px;
}
}

